--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "@akotliar/sitemap-qa": "^1.0.0-alpha.0",
     "axios": "^1.13.2",
     "chalk": "^5.6.2",
-    "cli-progress": "^3.12.0",
     "commander": "^14.0.2",
     "dotenv": "^17.2.3",
     "fast-xml-parser": "^5.3.2",
@@ -57,7 +56,9 @@
     "undici": "^7.16.0"
   },
   "devDependencies": {
+    "@types/cli-progress": "^3.11.6",
     "@types/node": "^24.10.1",
+    "cli-progress": "^3.12.0",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
