--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "dotenv": "^17.2.3",
     "fast-xml-parser": "^5.3.2",
     "ora": "^8.2.0",
-    "playwright": "^1.57.0",
-    "undici": "^7.16.0"
+    "playwright": "^1.57.0"
   },
   "devDependencies": {
     "@types/cli-progress": "^3.11.6",
