--- a/package.json
+++ b/package.json
@@ -52,10 +52,16 @@
     "commander": "^14.0.2",
     "dotenv": "^17.2.3",
     "fast-xml-parser": "^5.3.3",
-    "ora": "^9.0.0"
+    "js-yaml": "^4.1.1",
+    "micromatch": "^4.0.8",
+    "ora": "^9.0.0",
+    "undici": "^7.16.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/cli-progress": "^3.11.6",
+    "@types/js-yaml": "^4.0.9",
+    "@types/micromatch": "^4.0.10",
     "@types/node": "^25.0.3",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
