--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/micromatch": "^4.0.10",
     "@types/node": "^25.0.3",
+    "@vitest/coverage-v8": "^4.0.16",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
