--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chalk": "^5.6.2",
     "commander": "^14.0.2",
     "fast-xml-parser": "^5.3.3",
+    "handlebars": "^4.7.8",
     "js-yaml": "^4.1.1",
     "micromatch": "^4.0.8",
     "undici": "^7.16.0",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@types/cli-progress": "^3.11.6",
+    "@types/handlebars": "^4.0.40",
     "@types/js-yaml": "^4.0.9",
     "@types/micromatch": "^4.0.10",
     "@types/node": "^25.0.3",
